RESOLVED FIXED170448
AX: Don't crash if no renderer is available for AccessibilityRenderObject
https://bugs.webkit.org/show_bug.cgi?id=170448
Summary AX: Don't crash if no renderer is available for AccessibilityRenderObject
Tomas Popela
Reported 2017-04-04 04:10:10 PDT
Don't crash or assert if no renderer is available, but early return gracefully (as in other places in the AccessibilityRenderObject.cpp). Spotted by running some tests through dogtail.
Attachments
Patch (2.49 KB, patch)
2017-04-04 04:21 PDT, Tomas Popela
no flags
Patch (2.55 KB, patch)
2017-04-06 02:48 PDT, Tomas Popela
no flags
Tomas Popela
Comment 1 2017-04-04 04:21:55 PDT
Radar WebKit Bug Importer
Comment 2 2017-04-04 04:22:40 PDT
chris fleizach
Comment 3 2017-04-04 07:01:54 PDT
Comment on attachment 306170 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=306170&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:535 > + return false; I think if this was true I would be more accurate
Tomas Popela
Comment 4 2017-04-06 02:48:47 PDT
Tomas Popela
Comment 5 2017-04-07 04:59:36 PDT
Comment on attachment 306372 [details] Patch Clearing flags on attachment: 306372 Committed r215089: <http://trac.webkit.org/changeset/215089>
Tomas Popela
Comment 6 2017-04-07 04:59:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.