AX: Don't crash if no renderer is available for AccessibilityRenderObject https://bugs.webkit.org/show_bug.cgi?id=170448

Reviewed by Chris Fleizach.

Don't crash or assert if no renderer is available, but early return
gracefully (as in other places in the AccessibilityRenderObject.cpp).
Spotted by running some tests through dogtail.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isOffScreen):
(WebCore::AccessibilityRenderObject::isUnvisited):
(WebCore::AccessibilityRenderObject::isVisited):

Canonical link: https://commits.webkit.org/187518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215089 268f45cc-cd09-0410-ab3c-d52691b4dbfc